made the game playable on mobile

--- a/valentines-day-game/src/style.css
+++ b/valentines-day-game/src/style.css
@@ -22,4 +22,8 @@ html, body {
 canvas {
   display: block;
   image-rendering: pixelated;
+  touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
